feat: add flag to support acl in db
